--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
     <!-- To look for a file: in this case main.css 
     <link href="{{url_for('static', filename='main.css')}}" rel="stylesheet" type="text/css"
     {%if title%}
@@ -26,16 +27,32 @@
     <nav class="navbar navbar-dark bg-dark">
         <form class="container-fluid justify-content-start">
 
-          <a href=""><button class="btn btn-outline-success me-2" type="button">Iniciar Sesión</button></a>
-          <a href=""><button class="btn btn-sm btn-outline-secondary" type="button">Docente</button></a>
-          <a href=""><button class="btn btn-sm btn-outline-secondary" type="button">Alumno</button></a>
+          <a href="{{ url_for('home') }}"><button class="btn btn-outline-success me-2" type="button">Iniciar Sesión</button></a>
+          <a href="{{ url_for('registrarDocente') }}"><button class="btn btn-sm btn-outline-primary me-2"  type="button">Docente</button></a>
+          <a href="{{ url_for('registrarEstudiante') }}"><button class="btn btn-sm btn-outline-secondary me-2" type="button">Alumno</button></a>
 
           
         </form>
     </nav>
 
-
-
+    <main role="main" class="container">
+        <div class="row">
+          <div class="col-md-8">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+              {% if messages %}
+                {% for category, message in messages %}
+                  <div class="alert alert-{{ category }}">
+                    {{ message }}
+                  </div>
+                {% endfor %}
+              {% endif %}
+            {% endwith %}
+            {% block content %}{% endblock %}
+          </div>
+          
+        </div>
+      </main>
+  
    
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
