Intento pasar una lista a js

--- a/Aula/templates/escogerEstudiante.html
+++ b/Aula/templates/escogerEstudiante.html
@@ -52,14 +52,13 @@
         function fnselect(){
             var element = document.querySelectorAll('.selected');
 
-
-
             if(element[0]!== undefined){ //it must be selected
               alert(element[0].children[0].firstChild.data);
-              /*var arrayLength = estudiantes.length;
+              /*
+              var arrayLength = estudiantes.length;
               for (var i = 0; i < arrayLength; i++) {
                   console.log(estudiantes[i]);
-                Do something
+                //Do something
               }*/
             }
 
