--- a/Aula/templates/escogerJuego.html
+++ b/Aula/templates/escogerJuego.html
@@ -1,4 +1,47 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>Escoger Juego</h1>
+
+    <table id="table" class="table table-hover"  data-toggle="table" data-pagination="true" data-search="true">
+        <thead>
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">Nombre</th>
+          <th scope="col">Categoria</th>
+        </tr>
+      </thead>
+      <tbody>
+          {% for juego in juegos %}
+            
+            {% if juego.categorias != None %}
+
+                {% for cat in juego.categorias %}
+                    <tr>
+                        
+                        <th scope="row">{{ juego.id }}</th>
+                        <td>{{ juego.nombre }}</td>
+                        <td>{{ cat.nombre }}</td>
+                                                
+                    </tr>
+                {% endfor %}
+
+            {% else %}
+                
+                <tr>
+                            
+                    <th scope="row">{{ juego.id }}</th>
+                    <td>{{ juego.nombre }}</td>
+                                                                
+                </tr>
+
+            {% endif %}
+
+            
+          {% endfor %}
+      </tbody>
+    </table>
+    <br>
+    <a class="btn btn-primary" href="{{ url_for('escogerJuego') }}" role="button" onclick="fnselect()">Continuar</a>
+    </br>
+
 {% endblock content %}
