--- a/Aula/templates/escogerJuego.html
+++ b/Aula/templates/escogerJuego.html
@@ -31,6 +31,7 @@
                             
                     <th scope="row">{{ juego.id }}</th>
                     <td>{{ juego.nombre }}</td>
+                    <td>"------"</td>
                                                                 
                 </tr>
 
@@ -43,5 +44,65 @@
     <br>
     <a class="btn btn-primary" href="{{ url_for('escogerJuego') }}" role="button" onclick="fnselect()">Continuar</a>
     </br>
+
+    <script>
+        var table = document.getElementById('table');
+        var selected = table.getElementsByClassName('selected');
+        table.onclick = highlight;
+    
+        function highlight(e) {
+            if (selected[0]) selected[0].className = '';
+            e.target.parentNode.className = 'selected';
+        }
+        
+        function fnselect(){
+            
+            var element = document.querySelectorAll('.selected');
+            
+            if(element[0]!== undefined){ //it must be selected
+
+              //alert(element[0].children[0].firstChild.data);
+
+                if(element[0].children[2].firstChild.data){
+                    var nombre_categoria = (element[0].children[2].firstChild.data);
+                    console.log(nombre_categoria)
+
+                    $.ajax({
+                        type: "POST",
+                        url: "/procesarJuego",
+                        data: JSON.stringify(nombre_categoria),
+                        contentType: "application/json",
+                        dataType: 'json',
+                        /*success: function(result) {
+                        console.log("Result:");
+                        console.log(result);
+                        } */
+                    });
+
+
+                }else{
+                    var id_juego = (element[0].children[0].firstChild.data);
+                    console.log(id_juego)
+
+                    $.ajax({
+                        type: "POST",
+                        url: "/procesarJuego",
+                        data: JSON.stringify(id_juego),
+                        contentType: "application/json",
+                        dataType: 'json',
+                        /*success: function(result) {
+                        console.log("Result:");
+                        console.log(result);
+                        } */
+                    });
+
+                }
+
+                                          
+            }
+
+        }
+        
+    </script>
 
 {% endblock content %}
