--- a/Aula/templates/escogerJuego.html
+++ b/Aula/templates/escogerJuego.html
@@ -1,108 +1,108 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>Escoger Juego</h1>
+<h1>Escoger Juego</h1>
 
-    <table id="table" class="table table-hover"  data-toggle="table" data-pagination="true" data-search="true">
-        <thead>
+<table id="table" class="table table-hover" data-toggle="table" data-pagination="true" data-search="true">
+    <thead>
         <tr>
-          <th scope="col">ID</th>
-          <th scope="col">Nombre</th>
-          <th scope="col">Categoria</th>
+            <th scope="col">ID</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Categoria</th>
         </tr>
-      </thead>
-      <tbody>
-          {% for juego in juegos %}
-            
-            {% if juego.categorias != None %}
+    </thead>
+    <tbody>
+        {% for juego in juegos %}
+
+            {% if juego.categorias != [] %}
 
                 {% for cat in juego.categorias %}
-                    <tr>
-                        
-                        <th scope="row">{{ juego.id }}</th>
-                        <td>{{ juego.nombre }}</td>
-                        <td>{{ cat.nombre }}</td>
-                                                
-                    </tr>
-                {% endfor %}
-
-            {% else %}
-                
                 <tr>
-                            
+
                     <th scope="row">{{ juego.id }}</th>
                     <td>{{ juego.nombre }}</td>
-                    <td>"------"</td>
-                                                                
+                    <td>{{ cat.nombre }}</td>
+
                 </tr>
+                {% endfor %}
+
+
+            {% else %}
+            <tr>
+
+                <th scope="row">{{ juego.id }}</th>
+                <td>{{ juego.nombre }}</td>
+                <td>"------"</td>
+
+            </tr>
 
             {% endif %}
 
-            
-          {% endfor %}
-      </tbody>
-    </table>
-    <br>
-    <a class="btn btn-primary" href="{{ url_for('escogerJuego') }}" role="button" onclick="fnselect()">Continuar</a>
-    </br>
 
-    <script>
-        var table = document.getElementById('table');
-        var selected = table.getElementsByClassName('selected');
-        table.onclick = highlight;
-    
-        function highlight(e) {
-            if (selected[0]) selected[0].className = '';
-            e.target.parentNode.className = 'selected';
-        }
-        
-        function fnselect(){
-            
-            var element = document.querySelectorAll('.selected');
-            
-            if(element[0]!== undefined){ //it must be selected
+        {% endfor %}
+    </tbody>
+</table>
+<br>
+<a class="btn btn-primary" href="{{ url_for('escogerJuego') }}" role="button" onclick="fnselect()">Continuar</a>
+</br>
 
-              //alert(element[0].children[0].firstChild.data);
+<script>
+    var table = document.getElementById('table');
+    var selected = table.getElementsByClassName('selected');
+    table.onclick = highlight;
 
-                if(element[0].children[2].firstChild.data){
-                    var nombre_categoria = (element[0].children[2].firstChild.data);
-                    console.log(nombre_categoria)
+    function highlight(e) {
+        if (selected[0]) selected[0].className = '';
+        e.target.parentNode.className = 'selected';
+    }
 
-                    $.ajax({
-                        type: "POST",
-                        url: "/procesarJuego",
-                        data: JSON.stringify(nombre_categoria),
-                        contentType: "application/json",
-                        dataType: 'json',
-                        /*success: function(result) {
-                        console.log("Result:");
-                        console.log(result);
-                        } */
-                    });
+    function fnselect() {
+
+        var element = document.querySelectorAll('.selected');
+
+        if (element[0] !== undefined) { //it must be selected
+
+            alert(element[0].children[2].firstChild.data);
+
+            if (element[0].children[2].firstChild.data) {
+                var nombre_categoria = (element[0].children[2].firstChild.data);
+                console.log(nombre_categoria)
+
+                $.ajax({
+                    type: "POST",
+                    url: "/procesarJuego",
+                    data: JSON.stringify(nombre_categoria),
+                    contentType: "application/json",
+                    dataType: 'json',
+                    /*success: function(result) {
+                    console.log("Result:");
+                    console.log(result);
+                    } */
+                });
 
 
-                }else{
-                    var id_juego = (element[0].children[0].firstChild.data);
-                    console.log(id_juego)
+            } else {
+                var id_juego = (element[0].children[0].firstChild.data);
+                console.log(id_juego)
 
-                    $.ajax({
-                        type: "POST",
-                        url: "/procesarJuego",
-                        data: JSON.stringify(id_juego),
-                        contentType: "application/json",
-                        dataType: 'json',
-                        /*success: function(result) {
-                        console.log("Result:");
-                        console.log(result);
-                        } */
-                    });
+                $.ajax({
+                    type: "POST",
+                    url: "/procesarJuego",
+                    data: JSON.stringify(id_juego),
+                    contentType: "application/json",
+                    dataType: 'json',
+                    /*success: function(result) {
+                    console.log("Result:");
+                    console.log(result);
+                    } */
+                });
 
-                }
-
-                                          
             }
 
+
         }
-        
-    </script>
+
+    }
+
+</script>
 
 {% endblock content %}
