creacion de la pagina para guardar un reporte

--- a/Aula/templates/layout.html
+++ b/Aula/templates/layout.html
@@ -5,10 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.19.1/dist/bootstrap-table.min.css">
-  
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
@@ -33,10 +35,12 @@
                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Cerrar Sesión</a>
                 <a class="nav-item nav-link" href="{{ url_for('juegos') }}">Juegos</a>
                 <a class="nav-item nav-link" href="{{ url_for('registrarEstudiante') }}">Estudiante</a>
+                <a class="nav-item nav-link" href="{{ url_for('estudianteReporte') }}">Reportes</a>
               {% else %}
                 <a class="nav-item nav-link" href="{{ url_for('home') }}">Iniciar Sesión</a>
                 <a class="nav-item nav-link" href="{{ url_for('registrarDocente') }}">Docente</a>
                 <a class="nav-item nav-link" href="{{ url_for('registrarEstudiante') }}">Estudiante</a>
+                <a class="nav-item nav-link" href="{{ url_for('estudianteReporte') }}">Reportes</a>
               {% endif %}
             </div>
            
