--- a/Aula/templates/escogerEstudiante.html
+++ b/Aula/templates/escogerEstudiante.html
@@ -56,7 +56,7 @@
             
             if(element[0]!== undefined){ //it must be selected
 
-              //alert(element[0].children[0].firstChild.data);
+              alert("Ha escogido al estudiante: " + element[0].children[1].firstChild.data + " " + element[0].children[2].firstChild.data + ". ¿Desea continuar?");
               var id_est = (element[0].children[0].firstChild.data);
               console.log(id_est)
 
