--- a/Aula/templates/escogerJuego.html
+++ b/Aula/templates/escogerJuego.html
@@ -1,6 +1,17 @@
 {% extends "layout.html" %}
 {% block content %}
 <h1>Escoger Juego</h1>
+<!--
+<div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+      Dropdown button
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+      <li>Action</li>
+      <li>Another action</li>
+      <li>Something else here</li>
+    </ul>
+  </div>-->
 
 <table id="table" class="table table-hover" data-toggle="table" data-pagination="true" data-search="true">
     <thead>
@@ -42,7 +53,7 @@
     </tbody>
 </table>
 <br>
-<a class="btn btn-primary" href="{{ url_for('escogerJuego') }}" role="button" onclick="fnselect()">Continuar</a>
+<a class="btn btn-primary" href="{{ url_for('empezarJuego') }}" role="button" onclick="fnselect()">Continuar</a>
 </br>
 
 <script>
