Correccion barra de menu

--- a/Aula/templates/layout.html
+++ b/Aula/templates/layout.html
@@ -34,7 +34,19 @@
               {% if current_user.is_authenticated %}
                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Cerrar Sesión</a>
                 <a class="nav-item nav-link" href="{{ url_for('juegos') }}">Juegos</a>
-                <a class="nav-item nav-link" href="{{ url_for('registrarEstudiante') }}">Estudiante</a>
+
+               <!-- <a class="nav-item nav-link" href="{{ url_for('registrarEstudiante') }}">Estudiante</a>-->
+
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Estudiante</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="{{ url_for('registrarEstudiante') }}">Crear</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('escogerEstudiante') }}">Escoger</a></li>
+                    
+                  </ul>
+                </li>
+
+
                 <a class="nav-item nav-link" href="{{ url_for('estudianteReporte') }}">Reportes</a>
               {% else %}
                 <a class="nav-item nav-link" href="{{ url_for('home') }}">Iniciar Sesión</a>
