--- a/Aula/templates/layout.html
+++ b/Aula/templates/layout.html
@@ -48,6 +48,9 @@
 
 
                 <a class="nav-item nav-link" href="{{ url_for('estudianteReporte') }}">Reportes</a>
+
+                <a class="nav-item nav-link" href="{{ url_for('perfilDocente') }}">Perfil</a>
+
               {% else %}
                 <a class="nav-item nav-link" href="{{ url_for('home') }}">Iniciar Sesión</a>
                 <a class="nav-item nav-link" href="{{ url_for('registrarDocente') }}">Docente</a>
