--- a/Aula/static/main.css
+++ b/Aula/static/main.css
@@ -2,83 +2,116 @@ body {
     background: #fafafa;
     color: #333333;
     margin-top: 5rem;
-  }
-  
-  h1, h2, h3, h4, h5, h6 {
+}
+
+h1 {
+    color: #1c3f68;
+}
+
+h2,
+h3,
+h4,
+h5,
+h6 {
     color: #444444;
-  }
-  
-  .bg-steel {
-    background-color: #5f788a;
-  }
-  
-  .site-header .navbar-nav .nav-link {
-    color: #cbd5db;
-  }
-  
-  .site-header .navbar-nav .nav-link:hover {
+}
+
+
+/*Color de la barra superor */
+
+#cabecera.nav-item.nav-link {
     color: #ffffff;
-  }
-  
-  .site-header .navbar-nav .nav-link.active {
+}
+
+.navbar-toggler {
+    color: #63b6f1;
+}
+
+.bg-steel {
+    background-color: #63b6f1;
+}
+
+
+/*----------------------------*/
+
+.form-group {
+    position: relative;
+}
+
+.site-header .navbar-nav .nav-link {
+    color: #cbd5db;
+}
+
+.site-header .navbar-nav .nav-link:hover {
+    color: #ffffff;
+}
+
+.site-header .navbar-nav .nav-link.active {
     font-weight: 500;
-  }
-  
-  .content-section {
+}
+
+.content-section {
+    width: 70%;
     background: #ffffff;
     padding: 10px 20px;
+    padding: 0.5em;
     border: 1px solid #dddddd;
-    border-radius: 3px;
+    border-radius: 50px;
+    margin-left: auto;
     margin-bottom: 20px;
-  }
-  
-  .article-title {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.5);
+}
+
+.article-title {
     color: #444444;
-  }
-  
-  a.article-title:hover {
+}
+
+a.article-title:hover {
     color: #428bca;
     text-decoration: none;
-  }
-  
-  .article-content {
+}
+
+.article-content {
     white-space: pre-line;
-  }
-  
-  .article-img {
+}
+
+.article-img {
     height: 65px;
     width: 65px;
     margin-right: 16px;
-  }
-  
-  .article-metadata {
+}
+
+.article-metadata {
     padding-bottom: 1px;
     margin-bottom: 4px;
     border-bottom: 1px solid #e3e3e3
-  }
-  
-  .article-metadata a:hover {
+}
+
+.article-metadata a:hover {
     color: #333;
     text-decoration: none;
-  }
-  
-  .article-svg {
+}
+
+.article-svg {
     width: 25px;
     height: 25px;
     vertical-align: middle;
-  }
-  
-  .account-img {
+}
+
+.account-img {
     height: 125px;
     width: 125px;
     margin-right: 20px;
     margin-bottom: 16px;
-  }
-  
-  .account-heading {
-    font-size: 2.5rem;
-  }
+}
 
-  .table tbody tr.highlight td {
+.account-heading {
+    font-size: 2.5rem;
+}
+
+.table tbody tr.highlight td {
     background-color: #ddd;
-  }
+}
