--- a/Aula/templates/layout.html
+++ b/Aula/templates/layout.html
@@ -53,7 +53,7 @@
                 <a class="nav-item nav-link" href="{{ url_for('perfilDocente') }}">Perfil</a>
 
               {% else %}
-                <a class="nav-item nav-link" href="{{ url_for('home') }}">Iniciar Sesión</a>
+                <a class="nav-item nav-link" id = "cabecera" href="{{ url_for('home') }}">Iniciar Sesión</a>
                 <a class="nav-item nav-link" href="{{ url_for('registrarDocente') }}">Docente</a>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Estudiante</a>
@@ -75,7 +75,7 @@
 
     <main role="main" class="container">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-10">
             {% with messages = get_flashed_messages(with_categories=true) %}
               {% if messages %}
                 {% for category, message in messages %}
