SE AGREGO MAS CARACTERISTICUAS VISUALES Correcion al seleccionar un juego la interfaz esta mejor disenada

--- a/Aula/templates/empezarJuego.html
+++ b/Aula/templates/empezarJuego.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>empezar juego Page</h1>
-    <div class="content-section">
-        <h1 class="display-7">Estudiante: </h1>
+    
+    <div class="form-group" id="empezarJuego">
+        <h1>EMPEZAR JUEGO</h1>
+     
+        <h3 >Estudiante: </h3>
 
         <figure>
             <blockquote class="blockquote">
@@ -10,9 +12,9 @@
             </blockquote>
             
           </figure>
-  
-
-          <h1 class="display-7">Juego: </h1>
+          
+       
+          <h3>Juego: </h3>
 
           <figure>
               <blockquote class="blockquote">
@@ -27,7 +29,7 @@
               
             </figure>
 
-            <h1 id"labelCalificacion" class="display-7">Calificación: </h1>
+            <h3 id"labelCalificacion" class="display-7">Calificación: </h3>
 
             <br>
             <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
