--- a/Aula/static/main.css
+++ b/Aula/static/main.css
@@ -6,14 +6,22 @@ body {
 
 h1 {
     color: #1c3f68;
+    text-align: center;
+}
+
+.btn-toolbar {
+    justify-content: center;
+    align-self: center;
 }
 
 h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+blockquote {
     color: #444444;
+    text-align: center;
 }
 
 .table {
@@ -43,7 +51,7 @@ h6 {
 }
 
 .site-header .navbar-nav .nav-link {
-    color: #cbd5db;
+    color: #ffffff;
 }
 
 .site-header .navbar-nav .nav-link:hover {
@@ -63,7 +71,20 @@ h6 {
     border-radius: 50px;
     margin-left: auto;
     margin-bottom: 20px;
+    justify-content: center;
     display: flex;
+    box-shadow: 0px 1px 40px 0px rgba(0, 0, 0, 0.5);
+}
+
+#empezarJuego {
+    width: 125%;
+    background: #ffffff;
+    padding: 10px 20px;
+    padding: 0.5em;
+    border: 1px solid #dddddd;
+    border-radius: 50px;
+    margin: 0 auto;
+    margin-bottom: 20px;
     justify-content: center;
     align-self: center;
     box-shadow: 0px 1px 40px 0px rgba(0, 0, 0, 0.5);
