Modificacion CSS y Minimas Se modfico el color de la barra con la imagen para que coincida ademas de borrar los titulos en ingles

--- a/Aula/static/main.css
+++ b/Aula/static/main.css
@@ -42,7 +42,8 @@ blockquote {
 }
 
 .bg-steel {
-    background-color: #63b6f1;
+    background-color: #2e58e4;
+    background-image: url("imagenes/fondo-azul.jpeg");
 }
 
 
@@ -141,5 +142,4 @@ a.article-title:hover {
 
 .table tbody tr.highlight td {
     background-color: #ddd;
-    color: #ffffff;
 }
